# objcurses

./: .gitignore  CMakeLists.txt  README.md  config.h  main.cpp  package.sh  version.h
entities/: object.cpp  object.h
entities/geometry/: face.cpp  face.h  material.cpp  material.h  object.cpp  object.h
entities/rendering/: buffer.cpp  buffer.h  pixel.cpp  pixel.h  projection.cpp  projection.h  renderer.cpp  renderer.h
entities/view/: camera.h  light.h
resources/objects/: .gitignore  linux.mtl  objcurses  pslogo.mtl
utils/: algorithms.cpp  algorithms.h  mathematics.cpp  mathematics.h  renderer.cpp  renderer.h
